tests/new_bad_type_arg_value.hop
// Verifies alloc bad type argument value.
fn main() i32 {
	var ma Allocator
	var t  i32
	var p  *i32 = alloc t
	return p as i32
}
